--- a/pages/common.less
+++ b/pages/common.less
@@ -1,4 +1,11 @@
 :global{
+  //custom antd style
+  .ant-layout-content{
+    min-height: calc(100vh - (69px + 64px));;
+  }
+
+
+  //custom norma style
   .tac{
     text-align: center;
   }
