--- a/pages/common.less
+++ b/pages/common.less
@@ -1,3 +1,4 @@
+
 :global{
   //custom antd style
   .ant-layout-content{
@@ -8,5 +9,74 @@
   //custom norma style
   .tac{
     text-align: center;
+  }
+
+  .mg1t{
+    margin-top: 8px;
+  }
+
+  .mg1l{
+    margin-left: 8px;
+  }
+
+  .mg1r{
+    margin-right: 8px;
+  }
+
+  .mg1b{
+    margin-bottom: 8px;
+  }
+
+  .mg1{
+    .mg1t();
+    .mg1r();
+    .mg1b();
+    .mg1l();
+  }
+
+  .mg2t{
+    margin-top: 16px;
+  }
+
+  .mg2l{
+    margin-left: 16px;
+  }
+
+  .mg2r{
+    margin-right: 16px;
+  }
+
+  .mg2b{
+    margin-bottom: 16px;
+  }
+
+  .mg2{
+    .mg2t();
+    .mg2r();
+    .mg2b();
+    .mg2l();
+  }
+
+  .pd2t{
+    padding-top: 16px;
+  }
+
+  .pd2l{
+    padding-left: 16px;
+  }
+
+  .pd2r{
+    padding-right: 16px;
+  }
+
+  .pd2b{
+    padding-bottom: 16px;
+  }
+
+  .pd2{
+    .pd2t();
+    .pd2b();
+    .pd2l();
+    .pd2r();
   }
 }
