feat(showview业务组件封装):

--- a/pages/common.less
+++ b/pages/common.less
@@ -79,4 +79,22 @@
     .pd2l();
     .pd2r();
   }
+
+  //右浮动
+  .flr{
+    float: right;
+  }
+
+  //左浮动
+  .fll{
+    float:left;
+  }
+
+  .talc{
+    text-align: center;
+  }
+
+  .talr{
+    text-align: right;
+  }
 }
